--- a/backend/FlliBrutti.Backend.Console/FlliBrutti.Backend.Console.csproj
+++ b/backend/FlliBrutti.Backend.Console/FlliBrutti.Backend.Console.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\FlliBrutti.Backend.Core\FlliBrutti.Backend.Core.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
