--- a/backend/FlliBrutti.Backend.API/appsettings.Development.json
+++ b/backend/FlliBrutti.Backend.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "FlliBruttiDatabase": "Server=localhost;Port=3306;Database=FlliBruttiDB;User=root;Password=root2002;"
   }
 }
