--- a/backend/FlliBrutti.Backend.Application/FlliBrutti.Backend.Application.csproj
+++ b/backend/FlliBrutti.Backend.Application/FlliBrutti.Backend.Application.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IServices/" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../FlliBrutti.Backend.Core/FlliBrutti.Backend.Core.csproj" />
+  </ItemGroup>
+
 </Project>
