--- a/backend/FlliBrutti.Backend.Application/FlliBrutti.Backend.Application.csproj
+++ b/backend/FlliBrutti.Backend.Application/FlliBrutti.Backend.Application.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
+    <Compile Remove="IServices\**" />
+    <EmbeddedResource Remove="IServices\**" />
+    <None Remove="IServices\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="IServices/" />
+    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
