added 2 more endpoints of Firma

--- a/backend/FlliBrutti.Backend.API/appsettings.Development.json
+++ b/backend/FlliBrutti.Backend.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "FlliBruttiDatabase": "Server=localhost;Port=3306;Database=FlliBruttiDB;User=root;Password=root2002;"
+    "FlliBruttiDatabase": "Server=localhost;Port=3306;Database=FlliBrutti;User=root;Password=root2002;"
   }
 }
