started develope of Person

--- a/backend/FlliBrutti.Backend.API/FlliBrutti.Backend.API.csproj
+++ b/backend/FlliBrutti.Backend.API/FlliBrutti.Backend.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>4ffad75c-6f35-4dcf-9884-e3a55b2cd486</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
