--- a/backend/FlliBrutti.Backend.API/appsettings.Development.json
+++ b/backend/FlliBrutti.Backend.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "FlliBruttiDatabase": "Server=localhost;Port=3306;Database=FlliBrutti;User=root;Password=root2002;"
+  },
+  "Security": {
+    "Secret":  "Secret-Di-Sviluppo"
   }
 }
