fixed some type issues

--- a/backend/FlliBrutti.Backend.API/appsettings.Development.json
+++ b/backend/FlliBrutti.Backend.API/appsettings.Development.json
@@ -9,6 +9,13 @@
     "FlliBruttiDatabase": "Server=localhost;Port=3306;Database=FlliBrutti;User=root;Password=root2002;"
   },
   "Security": {
-    "Secret":  "Secret-Di-Sviluppo"
+    "Secret": "Secret-Di-Sviluppo"
+  },
+  "Jwt": {
+    "SecretKey": "SuperSecretKeyForJWTAuthenticationMinimum32CharactersLong!",
+    "Issuer": "FlliBrutti.Backend.API",
+    "Audience": "FlliBrutti.Frontend",
+    "AccessTokenExpirationHours": 2,
+    "RefreshTokenExpirationDays": 15
   }
 }
