--- a/backend/FlliBrutti.Backend.Application/FlliBrutti.Backend.Application.csproj
+++ b/backend/FlliBrutti.Backend.Application/FlliBrutti.Backend.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
   <ItemGroup>
