added container and orcherstration

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,13 @@
 # ============================================
-# DOCKERFILE - FlliBrutti Backend API (.NET 8)
-# Multi-stage build ottimizzato per produzione
+# DOCKERFILE - FlliBrutti Backend API
+# Solo l'applicazione .NET 8 - Il DB è separato
 # ============================================
 
 # === STAGE 1: Build ===
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copia i file .csproj per sfruttare la cache delle dipendenze
+# Copia i file .csproj per cache delle dipendenze
 COPY backend.sln .
 COPY FlliBrutti.Backend.API/FlliBrutti.Backend.API.csproj FlliBrutti.Backend.API/
 COPY FlliBrutti.Backend.Application/FlliBrutti.Backend.Application.csproj FlliBrutti.Backend.Application/
@@ -16,16 +16,16 @@ COPY FlliBrutti.Backend.Infrastructure/FlliBrutti.Backend.Infrastructure.csproj 
 COPY FlliBrutti.Backend.Console/FlliBrutti.Backend.Console.csproj FlliBrutti.Backend.Console/
 COPY FlliBrutti.Backend.Test/FlliBrutti.Backend.Test.csproj FlliBrutti.Backend.Test/
 
-# Restore delle dipendenze (cached se i .csproj non cambiano)
+# Restore dipendenze
 RUN dotnet restore backend.sln
 
-# Copia tutto il codice sorgente
+# Copia tutto il codice
 COPY . .
 
-# Build in modalità Release
+# Build
 RUN dotnet build backend.sln -c Release --no-restore
 
-# Pubblica l'applicazione
+# Publish
 RUN dotnet publish FlliBrutti.Backend.API/FlliBrutti.Backend.API.csproj \
     -c Release \
     -o /app/publish \
@@ -35,31 +35,28 @@ RUN dotnet publish FlliBrutti.Backend.API/FlliBrutti.Backend.API.csproj \
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
-# Installa curl per healthcheck
+# Curl per healthcheck
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-# Crea utente non-root per sicurezza
+# Utente non-root
 RUN groupadd -r appgroup && useradd -r -g appgroup appuser
 
-# Copia l'applicazione pubblicata
+# Copia app pubblicata
 COPY --from=build /app/publish .
 
-# Crea directory per i log
+# Permessi
 RUN mkdir -p /app/Logs && chown -R appuser:appgroup /app
 
-# Cambia all'utente non-root
 USER appuser
 
-# Variabili d'ambiente
+# Configurazione
 ENV ASPNETCORE_URLS=http://+:5000 \
-    ASPNETCORE_ENVIRONMENT=Production \
-    DOTNET_RUNNING_IN_CONTAINER=true
+    ASPNETCORE_ENVIRONMENT=Production
 
-# Esponi la porta
 EXPOSE 5000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
-    CMD curl -f https://localhost:5000/api/v1/Login/HealthCheck || exit 1
-# Entrypoint
+# Healthcheck
+HEALTHCHECK --interval=30s --timeout=10s --start-period=15s --retries=3 \
+    CMD curl -f http://localhost:5000/api/v1/Login || exit 1
+
 ENTRYPOINT ["dotnet", "FlliBrutti.Backend.API.dll"]
