--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,24 +107,24 @@ jobs:
   # ============================================
   # JOB 3: Docker Build Test
   # ============================================
-  docker-build-test:
-    name: 🐳 Docker Build Test
-    runs-on: ubuntu-latest
-    needs: build-and-test
+  # docker-build-test:
+  #   name: 🐳 Docker Build Test
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-test
 
-    steps:
-      - name: 📥 Checkout repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: 📥 Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: 🐳 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: 🐳 Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: 🔨 Build Docker image (test only)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: backend/Dockerfile
-          push: false
-          tags: fllibrutti-backend:test
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  #     - name: 🔨 Build Docker image (test only)
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: .
+  #         file: backend/Dockerfile
+  #         push: false
+  #         tags: fllibrutti-backend:test
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
