--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -83,8 +83,8 @@ jobs:
         id: build-push
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: backend/Dockerfile
+          context: ./backend
+          file: ./backend/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
