--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,6 +1,6 @@
 # ============================================
 # CD - Continuous Deployment
-# Build Docker image e deploy
+# Build Backend + Database → Deploy Staging
 # ============================================
 name: CD - Build & Deploy
 
@@ -8,38 +8,24 @@ on:
   push:
     branches: [main, master]
     paths:
-      - "backend/**/*.cs"
-      - "backend/**/*.csproj"
-      - "backend/Dockerfile"
-      - ".github/workflows/cd.yml"
-  # Permette deploy manuale
+      - 'backend/**'
+      - '.github/workflows/cd.yml'
   workflow_dispatch:
-    inputs:
-      environment:
-        description: "Environment to deploy"
-        required: true
-        default: "staging"
-        type: choice
-        options:
-          - staging
-          - production
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/fllibrutti-backend
-  DOTNET_VERSION: "8.0.x"
+  IMAGE_BACKEND: ${{ github.repository_owner }}/fllibrutti-backend
+  IMAGE_DB: ${{ github.repository_owner }}/fllibrutti-db
 
 jobs:
   # ============================================
-  # JOB 1: Build e Push Docker Image
+  # JOB 1: Build e Push Docker Images
   # ============================================
   build-and-push:
-    name: 🐳 Build & Push Docker Image
+    name: 🐳 Build & Push Images
     runs-on: ubuntu-latest
-
+    
     outputs:
-      image-tag: ${{ steps.meta.outputs.tags }}
-      image-digest: ${{ steps.build-push.outputs.digest }}
       short-sha: ${{ steps.vars.outputs.short_sha }}
 
     permissions:
@@ -54,7 +40,6 @@ jobs:
         id: vars
         run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      # Login a GitHub Container Registry
       - name: 🔐 Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -62,50 +47,59 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Setup Docker Buildx
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Genera tags e labels per l'immagine
-      - name: 🏷️ Extract metadata
-        id: meta
+      # ========== BACKEND IMAGE ==========
+      - name: 🏷️ Extract metadata (Backend)
+        id: meta-backend
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_BACKEND }}
           tags: |
             type=sha,prefix=
-            type=ref,event=branch
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
-            type=raw,value={{date 'YYYYMMDD-HHmmss'}}
+            type=raw,value=latest
 
-      # Build e Push
-      - name: 🔨 Build and push Docker image
-        id: build-push
+      - name: 🔨 Build and push Backend image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          build-args: |
-            BUILD_DATE=${{ github.event.head_commit.timestamp }}
-            VCS_REF=${{ github.sha }}
-            VERSION=${{ steps.vars.outputs.short_sha }}
+          tags: ${{ steps.meta-backend.outputs.tags }}
+          labels: ${{ steps.meta-backend.outputs.labels }}
+          cache-from: type=gha,scope=backend
+          cache-to: type=gha,mode=max,scope=backend
 
-      # Sommario del build
+      # ========== DATABASE IMAGE ==========
+      - name: 🏷️ Extract metadata (Database)
+        id: meta-db
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_DB }}
+          tags: |
+            type=sha,prefix=
+            type=raw,value=latest
+
+      - name: 🔨 Build and push Database image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile.db
+          push: true
+          tags: ${{ steps.meta-db.outputs.tags }}
+          labels: ${{ steps.meta-db.outputs.labels }}
+          cache-from: type=gha,scope=db
+          cache-to: type=gha,mode=max,scope=db
+
       - name: 📋 Build Summary
         run: |
-          echo "## 🐳 Docker Image Built Successfully!" >> $GITHUB_STEP_SUMMARY
+          echo "## 🐳 Docker Images Built!" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Image:** \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "**Tags:**" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          echo "**Digest:** \`${{ steps.build-push.outputs.digest }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "| Image | Tag |" >> $GITHUB_STEP_SUMMARY
+          echo "|-------|-----|" >> $GITHUB_STEP_SUMMARY
+          echo "| Backend | \`${{ env.REGISTRY }}/${{ env.IMAGE_BACKEND }}:latest\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Database | \`${{ env.REGISTRY }}/${{ env.IMAGE_DB }}:latest\` |" >> $GITHUB_STEP_SUMMARY
 
   # ============================================
   # JOB 2: Deploy to Staging
@@ -114,8 +108,7 @@ jobs:
     name: 🚀 Deploy to Staging
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
-
+    
     environment:
       name: staging
       url: ${{ vars.STAGING_URL }}
@@ -124,6 +117,17 @@ jobs:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
+      - name: 📄 Copy docker-compose to server
+        uses: appleboy/scp-action@v0.1.7
+        if: ${{ vars.STAGING_HOST != '' }}
+        with:
+          host: ${{ vars.STAGING_HOST }}
+          username: ${{ secrets.STAGING_USER }}
+          key: ${{ secrets.STAGING_SSH_KEY }}
+          source: "backend/docker-compose.prod.yml"
+          target: "/opt/fllibrutti/"
+          strip_components: 1
+
       - name: 🚀 Deploy to staging server
         uses: appleboy/ssh-action@v1.0.3
         if: ${{ vars.STAGING_HOST != '' }}
@@ -131,40 +135,54 @@ jobs:
           host: ${{ vars.STAGING_HOST }}
           username: ${{ secrets.STAGING_USER }}
           key: ${{ secrets.STAGING_SSH_KEY }}
-          envs: GHCR_PAT,REGISTRY,IMAGE_NAME
           script: |
-            # Login al registry con PAT
-            echo $GHCR_PAT | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            cd /opt/fllibrutti
+            
+            # Login a GHCR
+            echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            
+            # Crea file .env
+            cat > .env << 'EOF'
+            REGISTRY=ghcr.io
+            IMAGE_BACKEND=${{ github.repository_owner }}/fllibrutti-backend
+            IMAGE_DB=${{ github.repository_owner }}/fllibrutti-db
+            TAG=latest
+            DB_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
+            SECURITY_SECRET=${{ secrets.SECURITY_SECRET }}
+            EOF
+            
+            # Pull e deploy
+            docker-compose -f docker-compose.prod.yml pull
+            docker-compose -f docker-compose.prod.yml up -d
+            
+            # Cleanup
+            docker image prune -f
+            
+            echo "✅ Deployment completed!"
+            docker-compose -f docker-compose.prod.yml ps
 
-            # Pull nuova immagine
-            docker pull $REGISTRY/$IMAGE_NAME:latest
-
-            # ... resto dello script
-        env:
-          GHCR_PAT: ${{ secrets.GHCR_PAT }}
-          REGISTRY: ${{ env.REGISTRY }}
-          IMAGE_NAME: ${{ env.IMAGE_NAME }}
-
-      # Health check (se configurato)
       - name: ❤️ Health Check
         if: ${{ vars.STAGING_URL != '' }}
         run: |
-          echo "Waiting for service to start..."
-          sleep 30
-
+          echo "Waiting for services to start..."
+          sleep 45
+          
           HEALTH_URL="${{ vars.STAGING_URL }}/api/v1/Login/HealthCheck"
           echo "Checking: $HEALTH_URL"
-
+          
           for i in {1..5}; do
             if curl -sf "$HEALTH_URL"; then
+              echo ""
               echo "✅ Health check passed!"
               exit 0
             fi
-            echo "Attempt $i failed, retrying in 10s..."
-            sleep 10
+            echo "Attempt $i failed, retrying in 15s..."
+            sleep 15
           done
-
-          echo "❌ Health check failed after 5 attempts"
+          
+          echo "❌ Health check failed"
           exit 1
 
       - name: 📋 Deploy Summary
@@ -173,82 +191,4 @@ jobs:
           echo "## 🚀 Staging Deployment" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Status:** ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Image:** \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest\`" >> $GITHUB_STEP_SUMMARY
           echo "**Commit:** \`${{ needs.build-and-push.outputs.short-sha }}\`" >> $GITHUB_STEP_SUMMARY
-
-  # ============================================
-  # JOB 3: Deploy to Production (manuale)
-  # ============================================
-  deploy-production:
-    name: 🚀 Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [build-and-push, deploy-staging]
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production'
-
-    environment:
-      name: production
-      url: ${{ vars.PRODUCTION_URL }}
-
-    steps:
-      - name: 📥 Checkout repository
-        uses: actions/checkout@v4
-
-      - name: 🚀 Deploy to production server
-        uses: appleboy/ssh-action@v1.0.3
-        if: ${{ vars.PRODUCTION_HOST != '' }}
-        with:
-          host: ${{ vars.PRODUCTION_HOST }}
-          username: ${{ secrets.PRODUCTION_USER }}
-          key: ${{ secrets.PRODUCTION_SSH_KEY }}
-          script: |
-            echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-            # Pull immagine specifica (non latest per production)
-            docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build-and-push.outputs.short-sha }}
-
-            # Blue-Green deployment
-            docker stop fllibrutti-api-old || true
-            docker rm fllibrutti-api-old || true
-            docker rename fllibrutti-api fllibrutti-api-old || true
-
-            docker run -d \
-              --name fllibrutti-api \
-              --restart unless-stopped \
-              -p 5000:5000 \
-              --network fllibrutti-network \
-              -e ASPNETCORE_ENVIRONMENT=Production \
-              -e "ConnectionStrings__FlliBruttiDatabase=${{ secrets.PRODUCTION_DB_CONNECTION }}" \
-              -e "Jwt__SecretKey=${{ secrets.JWT_SECRET_KEY }}" \
-              -e "Security__Secret=${{ secrets.SECURITY_SECRET }}" \
-              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build-and-push.outputs.short-sha }}
-
-            # Verifica e cleanup
-            sleep 30
-            if docker ps | grep -q fllibrutti-api; then
-              docker rm fllibrutti-api-old || true
-              echo "✅ Production deployment successful!"
-            else
-              echo "❌ Rollback to previous version"
-              docker stop fllibrutti-api || true
-              docker rm fllibrutti-api || true
-              docker rename fllibrutti-api-old fllibrutti-api || true
-              docker start fllibrutti-api
-              exit 1
-            fi
-
-            docker image prune -f
-
-      - name: ❤️ Production Health Check
-        if: ${{ vars.PRODUCTION_URL != '' }}
-        run: |
-          sleep 30
-          curl -sf "${{ vars.PRODUCTION_URL }}/api/v1/Login/HealthCheck" || exit 1
-          echo "✅ Production is healthy!"
-
-      - name: 📋 Production Deploy Summary
-        if: always()
-        run: |
-          echo "## 🚀 Production Deployment" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Status:** ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Image:** \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build-and-push.outputs.short-sha }}\`" >> $GITHUB_STEP_SUMMARY
