--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,9 @@ jobs:
       - name: 🔨 Build solution
         run: dotnet build backend/backend.sln --configuration Release --no-restore
 
-      - name: 🧪 Run tests
-        run: dotnet test backend/backend.sln --configuration Release --no-build --verbosity normal
-        continue-on-error: true
+      # - name: 🧪 Run tests
+      #   run: dotnet test backend/backend.sln --configuration Release --no-build --verbosity normal
+      #   continue-on-error: true
 
   security-scan:
     name: 🔒 Security Scan
