--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,39 +1,31 @@
 # ============================================
-# DOCKER COMPOSE - FlliBrutti Backend
-# Orchestrazione locale: API + MySQL
+# DOCKER COMPOSE - PROD/STAGING CONFIGURATION
 # ============================================
 
 version: '3.8'
 
 services:
-  # === BACKEND API ===
   api:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: runtime
+    image: ${REGISTRY:-ghcr.io}/${IMAGE_BE}:${TAG:-latest}
     container_name: fllibrutti-api
     ports:
-      - "5001:5000"
+      - "5000:5000"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Production
+      - ASPNETCORE_ENVIRONMENT=Staging
       - ASPNETCORE_URLS=http://+:5000
-      # Connection string per MySQL nel container
-      - ConnectionStrings__FlliBruttiDatabase=${DATABASE_URL}
-      # JWT Configuration
-      - Jwt__SecretKey=${JWT_SECRET_KEY:-SuperSecretKeyForJWTAuthenticationMinimum32CharactersLong!}
+      - ConnectionStrings__FlliBruttiDatabase=Server=db;Port=3306;Database=FlliBrutti;User=fllibrutti;Password=${DB_PASSWORD};
+      - Jwt__SecretKey=${JWT_SECRET_KEY}
       - Jwt__Issuer=FlliBrutti.Backend.API
       - Jwt__Audience=FlliBrutti.Frontend
       - Jwt__AccessTokenExpirationHours=2
       - Jwt__RefreshTokenExpirationDays=15
-      # Security
-      - Security__Secret=${SECURITY_SECRET:-Secret-Di-Produzione-Sicuro}
+      - Security__Secret=${SECURITY_SECRET}
     depends_on:
       db:
         condition: service_healthy
     networks:
-      - fllibrutti-network  # Rete con il database
-      - app-net  # Rete condivisa con il frontend
+      - fllibrutti-network
+      - app-net
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/api/v1/Login/HealthCheck"]
@@ -41,28 +33,24 @@ services:
       timeout: 10s
       retries: 3
       start_period: 15s
-    volumes:
-      - api-logs:/app/Logs
 
-  # === DATABASE MYSQL ===
   db:
-    image: mysql:8.0
+    image: ${REGISTRY:-ghcr.io}/${IMAGE_DB}:${TAG:-latest}
     container_name: fllibrutti-db
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-root2002}
-      MYSQL_DATABASE: ${DB_NAME:-FlliBrutti}
-      MYSQL_USER: ${DB_USER:-fllibrutti}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-SecurePassword123!}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_DATABASE: FlliBrutti
+      MYSQL_USER: fllibrutti
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
       - "6000:3306"
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./init-db:/docker-entrypoint-initdb.d  # Script SQL di inizializzazione
     networks:
       - fllibrutti-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD:-root2002}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -72,32 +60,9 @@ services:
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_unicode_ci
 
-  # === PHPMYADMIN (opzionale, per debug) ===
-  phpmyadmin:
-    image: phpmyadmin:latest
-    container_name: fllibrutti-phpmyadmin
-    environment:
-      PMA_HOST: db
-      PMA_PORT: 3306
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-root2002}
-    ports:
-      - "8080:80"
-    depends_on:
-      - db
-    networks:
-      - fllibrutti-network
-    restart: unless-stopped
-    profiles:
-      - debug  # Avvia solo con: docker-compose --profile debug up
-
-# === VOLUMI ===
 volumes:
   mysql-data:
-    driver: local
-  api-logs:
-    driver: local
 
-# === NETWORK ===
 networks:
   fllibrutti-network:
     driver: bridge
