--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,7 @@ jobs:
   # JOB 1: Build e Push Docker Images
   # ============================================
   build-and-push:
-    name: 🐳 Build & Push Images
+    name: Build & Push Images
     runs-on: ubuntu-latest
     
     outputs:
@@ -33,25 +33,25 @@ jobs:
       packages: write
 
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🔧 Set variables
+      - name: Set variables
         id: vars
         run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: 🔐 Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🐳 Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       # ========== BACKEND IMAGE ==========
-      - name: 🏷️ Extract metadata (Backend)
+      - name: Extract metadata (Backend)
         id: meta-backend
         uses: docker/metadata-action@v5
         with:
@@ -60,7 +60,7 @@ jobs:
             type=sha,prefix=
             type=raw,value=latest
 
-      - name: 🔨 Build and push Backend image
+      - name: Build and push Backend image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
@@ -72,7 +72,7 @@ jobs:
           cache-to: type=gha,mode=max,scope=backend
 
       # ========== DATABASE IMAGE ==========
-      - name: 🏷️ Extract metadata (Database)
+      - name: Extract metadata (Database)
         id: meta-db
         uses: docker/metadata-action@v5
         with:
@@ -81,7 +81,7 @@ jobs:
             type=sha,prefix=
             type=raw,value=latest
 
-      - name: 🔨 Build and push Database image
+      - name: Build and push Database image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
@@ -92,9 +92,9 @@ jobs:
           cache-from: type=gha,scope=db
           cache-to: type=gha,mode=max,scope=db
 
-      - name: 📋 Build Summary
+      - name: Build Summary
         run: |
-          echo "## 🐳 Docker Images Built!" >> $GITHUB_STEP_SUMMARY
+          echo "## Docker Images Built!" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Image | Tag |" >> $GITHUB_STEP_SUMMARY
           echo "|-------|-----|" >> $GITHUB_STEP_SUMMARY
@@ -106,7 +106,7 @@ jobs:
   # JOB 2: Deploy to Staging
   # ============================================
   deploy-staging:
-    name: 🚀 Deploy to Staging
+    name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: build-and-push
     
@@ -115,10 +115,10 @@ jobs:
       url: ${{ vars.STAGING_URL }}
 
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 📄 Copy docker-compose to server
+      - name: Copy docker-compose to server
         uses: appleboy/scp-action@v0.1.7
         if: ${{ vars.STAGING_HOST != '' }}
         with:
@@ -129,7 +129,7 @@ jobs:
           target: "/opt/fllibrutti/"
           strip_components: 1
 
-      - name: 🚀 Deploy to staging server
+      - name: Deploy to staging server
         uses: appleboy/ssh-action@v1.0.3
         if: ${{ vars.STAGING_HOST != '' }}
         with:
@@ -161,10 +161,10 @@ jobs:
             # Cleanup
             docker image prune -f
             
-            echo "✅ Deployment completed!"
+            echo "Deployment completed!"
             docker-compose -f docker-compose.prod.yml ps
 
-      - name: ❤️ Health Check
+      - name: Health Check
         if: ${{ vars.STAGING_URL != '' }}
         run: |
           echo "Waiting for services to start..."
@@ -176,20 +176,19 @@ jobs:
           for i in {1..5}; do
             if curl -sf "$HEALTH_URL"; then
               echo ""
-              echo "✅ Health check passed!"
+              echo "Health check passed!"
               exit 0
             fi
             echo "Attempt $i failed, retrying in 15s..."
             sleep 15
           done
           
-          echo "❌ Health check failed"
+          echo "Health check failed"
           exit 1
 
-      - name: 📋 Deploy Summary
-        if: always()
+      - name: Deploy Summary
         run: |
-          echo "## 🚀 Staging Deployment" >> $GITHUB_STEP_SUMMARY
+          echo "## Staging Deployment" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Status:** ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
           echo "**Commit:** \`${{ needs.build-and-push.outputs.short-sha }}\`" >> $GITHUB_STEP_SUMMARY
