--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       #   continue-on-error: true
 
   security-scan:
-    name: 🔒 Security Scan
+    name: Security Scan
     runs-on: ubuntu-latest
     needs: build-and-test
 
@@ -70,18 +70,18 @@ jobs:
           fi
 
   docker-build-test:
-    name: 🐳 Docker Build Test
+    name: Docker Build Test
     runs-on: ubuntu-latest
     needs: build-and-test
 
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🐳 Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🔨 Build Backend image (test)
+      - name: Build Backend image (test)
         uses: docker/build-push-action@v5
         with:
           context: ./backend
@@ -89,7 +89,7 @@ jobs:
           push: false
           tags: fllibrutti-backend:test
 
-      - name: 🔨 Build Database image (test)
+      - name: Build Database image (test)
         uses: docker/build-push-action@v5
         with:
           context: ./backend
