--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,7 @@ jobs:
         with:
           context: ./backend
           file: ./backend/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: false
           tags: fllibrutti-backend:test
 
@@ -94,5 +95,6 @@ jobs:
         with:
           context: ./backend
           file: ./backend/Dockerfile.db
+          platforms: linux/amd64,linux/arm64
           push: false
           tags: fllibrutti-db:test
